--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="team-members">
         <h3>Meet the Team</h3>
         <ul>
-          <li><a href="https://linkedin.com/teammember1" target="_blank">Team Member 1</a></li>
-          <li><a href="https://github.com/teammember1" target="_blank">Github</a></li>
-          <li><a href="https://twitter.com/teammember1" target="_blank">Twitter</a></li>
-          <li><a href="https://linkedin.com/teammember2" target="_blank">Team
+          <li><a href="https://linkedin.com/maaoui nada" target="_blank">Team Member 1</a></li>
+          <li><a href="https://github.com/maaoui nada" target="_blank">Github</a></li>
+          <li><a href="https://twitter.com/salma snoussi " target="_blank">Twitter</a></li>
+          <li><a href="https://linkedin.com/salma snoussi" target="_blank">Team
